--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,10 @@
-//{
-    // 使用 IntelliSense 了解相关属性。
-    // 悬停以查看现有属性的描述。
-    // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
-    //csdn 博客配置 https://blog.csdn.net/bat67/article/details/76095813
-    //知乎配置 https://www.zhihu.com/question/30315894
-    /*
+/*  参考网址：
+    欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
+    csdn 博客配置 https://blog.csdn.net/bat67/article/details/76095813
+    知乎配置 https://www.zhihu.com/question/30315894
+    VS Code 编译调试C/C++: http://cauyxy.com/2019/04/20/C++/
+    */
+/*  相关目录标识符
     ${workspaceFolder} - the path of the folder opened in VS Code
     ${workspaceRootFolderName} - the name of the folder opened in VS Code without any slashes (/)
     ${file} - the current opened file
@@ -16,31 +16,6 @@
     ${cwd} - the task runner's current working directory on startup
     ${lineNumber} - the current selected line number in the active file
     */
-    /*"version": "0.2.0",
-    "configurations": [
-        {
-            "name": "(gdb) Launch", // 配置名称，将会在启动配置的下拉菜单中显示
-            "type": "cppdbg", // 配置类型，这里只能为cppdbg
-            "request": "launch", // 请求配置类型，可以为launch（启动）或attach（附加）
-            "program": "${workspaceFolder}/bin/${workspaceRootFolderName}.exe", // 将要进行调试的程序的路径
-            "args": [], // 程序调试时传递给程序的命令行参数，一般设为空即可
-            "stopAtEntry": false, // 设为true时程序将暂停在程序入口处，一般设置为false
-            "cwd": "${workspaceFolder}", // 调试程序时的工作目录，一般为${workspaceFolder}即代码所在目录
-            "environment": [],
-            "externalConsole": true, // 调试时是否显示控制台窗口，一般设置为true显示控制台
-            "MIMode": "gdb",
-            "miDebuggerPath": "E:\\mingw64\\bin\\gdb.exe", // miDebugger的路径，注意这里要与MinGw的路径对应
-            "preLaunchTask": "g++", // 调试会话开始前执行的任务，一般为编译程序，c++为g++, c为gcc
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ]
-        }
-    ]
-}*/
 {
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
@@ -48,7 +23,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch",
+            "name": "Debug",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/${workspaceRootFolderName}.exe",
@@ -56,7 +31,7 @@
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": true,
+            "externalConsole": false,
             "MIMode": "gdb",
             "miDebuggerPath": "E:\\mingw64\\bin\\gdb.exe", // miDebugger的路径，注意这里要与MinGw的路径对应
             "setupCommands": [
@@ -66,7 +41,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "make"
+            "preLaunchTask": "build" //在调试前进行编译链接
         }
     ]
 }
