--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,9 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "2.0.0",
+    "presentation": {
+        "clear": true
+    },
     "tasks": [ //all tasks are depended on the CMakeLists.txt
         { //compile project(mingw32-make)
             "label": "Compile",
@@ -79,7 +82,14 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "problemMatcher": []
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": true
+            },
         }
     ]
 }
